increase error consistency